[package]
name = "tantivyindexTocsv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
anyhow = "1.0"
regex = "1.8.4"

[dependencies.tantivy]
version = "0.19.2"
features = ["brotli-compression"]





